fix chrome screen flicker

--- a/client/assets/styles/scss/sidebar/sidebar.scss
+++ b/client/assets/styles/scss/sidebar/sidebar.scss
@@ -1,5 +1,10 @@
 // sidebar
 .sidebar {
+  // webkit flicker bug:
+  // https://code.google.com/p/chromium/issues/detail?id=138415
+  // https://code.google.com/p/chromium/issues/detail?id=311583
+  -webkit-backface-visibility: hidden;
+
   background: $white;
   border-right: 1px solid rgba($black,.1);
   float: left;
